--- a/src/projects/aleo/index.yaml
+++ b/src/projects/aleo/index.yaml
@@ -6,3 +6,4 @@ product_readiness: testnet, mainnet coming in July 2023
 links:
   web: https://www.aleo.studio
   github: https://github.com/AleoHQ
+prova
